# dwlbg

./: README.md  animation.c  animation.h  buffers.c  buffers.h  cairo-pixbuf.c  cairo-pixbuf.h  config.c  config.example  config.h  dwlbg.c  dwlbg.h  dwlbgctl.c  meson.build  output.c  output.h
protocols/: meson.build
